--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -248,7 +248,13 @@ Table `r table_leaf_traits`, cont.
 
 ![](table1b.png)
 
-*1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 4. Chin and Sillett 2019; 5. Wyka et al. 2012; 6. Atherton et al. 2017; 7. Kenzo et al. 2015; 8. Kusi and Karasi 2020; 9. Dang et al. 1997; 10. Gebauer et al. 2015; 11. Marenco et al. 2017; 12.Kafuti et al. 2020; 13. Van Wittenberghe et al. 2012; 14. Zhang et al. 2019; 15. Weerasinghe et al. 2014; 16. Oldham et al. 2010; 17. Ichie et al. 2016; 18. Gregoriou et al. 2007; 19. Levizou et al. 2005; 20. Liakoura 1997; 21. Fauset et al. 2018; 22. Niinemets et al. 1998, 23. Ishida et al. 1998; 24. Millen and Clendon 1979; 25. Smith and Carter, 1988; 26. Hadley and Smith 1987; 27. Panditharathna et al. 2008; 28. Baltzer and Thomas 2005; 29. Dietz et al. 2007; 30. Coble et al. 2016; 31. Scartazza et al. 2016; 32. Duursma and Marshall, 2006; 33. Harley et al. 1996;  34. Hernandez et al. 2020; 35. Turnbull et al. 2003; 36. Chen et al. 2020; 37. van de Weg et al. 2012; 38. M.A Cavaleri et al. 2008;  39. Koniger et al. 1995; 40. Mastubara et al. 2009; 41. Harris and Medina 2013; 42. Hansen et al. 2001; 43. Poorter et al. 1995; 44. Coble et al. 2017; 45. Niinemets et al. 2004; 46. Poorter et al. 2000
+
+\newpage
+Table `r table_leaf_traits`, cont.
+
+![](table1c.png)
+
+*1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 4. Chin and Sillett 2019; 5. Wyka et al. 2012; 6. Atherton et al. 2017; 7. Kenzo et al. 2015; 8. Kusi and Karasi 2020; 9. Dang et al. 1997; 10. Gebauer et al. 2015; 11. Marenco et al. 2017; 12. Kafuti et al. 2020; 13. Van Wittenberghe et al. 2012; 14. Zhang et al. 2019; 15. Weerasinghe et al. 2014; 16. Oldham et al. 2010; 17. Ichie et al. 2016; 18. Gregoriou et al. 2007; 19. Levizou et al. 2005; 20. Liakoura 1997; 21. Fauset et al. 2018; 22. Niinemets et al. 1998, 23. Ishida et al. 1998; 24. Millen and Clendon 1979; 25. Smith and Carter, 1988; 26. Hadley and Smith 1987; 27. Panditharathna et al. 2008; 28. Baltzer and Thomas 2005; 29. Dietz et al. 2007; 30. Coble et al. 2016; 31. Scartazza et al. 2016; 32. Duursma and Marshall, 2006; 33. Harley et al. 1996;  34. Hernandez et al. 2020; 35. Turnbull et al. 2003; 36. Chen et al. 2020; 37. van de Weg et al. 2012; 38. M.A Cavaleri et al. 2008;  39. Koniger et al. 1995; 40. Mastubara et al. 2009; 41. Harris and Medina 2013; 42. Hansen et al. 2001; 43. Poorter et al. 1995; 44. Coble et al. 2017; 45. Niinemets et al. 2004; 46. Poorter et al. 2000; 47. Taylor et al. 2021; 48. Harley et al. 1997; 49. Niinemets and Sun, 2014; 50. Sharkey and Monson, 2014; 51. Saimpraga et al. 2013; 52. Zwieniecki et al. 2004; 53. Sack and Scoffoni, 2013; 54. Ball et al., 1988 
 ```{r eval=FALSE, echo=FALSE}
 # refs in this table currently in the nocite field at top of document 
 ```
@@ -299,7 +305,7 @@ Table `r table_leaf_metabolism`, cont.
 
 ![](table2c.png)
 
-*1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et al. 1990; 4. Dang et al. 1997; 5. Marenco et al. 2017; 6. Ambrose et al. 2015; 7. Zweifel et al. 2001; 8. Slot et al. 2019; 9. Hernandez et al. 2020; 10. Urban et al. 2007; 11. Carter and Cavaleri 2018; 12. Martin et al. 1999; 13. Mau et al. 2018;  14. Kosugi et al. 2012; 15. Niinemets et al. 2015; 16. Bachofen et al. 2020; 17. Hamerlynck and Knapp 1994; 18. Coble et al. 2017; 19. Wyka et al. 2012; 20. Rijkerse et al. 2000; 21. Ishida et al. 1999; 22. Weerasinghe et al. 2014; 23. Scartazza et al. 2016; 24. Miller et al. 2021; 25. Harris and Medina 2013; 26. Legner et al. 2014; 27. Kitao et al. 2012; 28. Fauset et al. 2018; 29. Rey-Sanchez et al. 2016; 30. Muller et al. 2021; 31. Curtis et al. 2019; 32. Mier et al. 2001; 33. Turnbull et al. 2003; 34. Araki et al. 2017; 35. Bolstad et al. 1999; 36. Kenzo et al. 2015; 37. Harley et al. 1996; 38. Xu and Griffin 2006; 39. Harley et al. 1997; 40. Niinemets and Sun, 2014; 41. Sharkey and Monson, 2014; 42. Saimpraga et al. 2013; 43. Atherton et al. 2017; 44. Carter et al. 2021
+*1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et al. 1990; 4. Dang et al. 1997; 5. Marenco et al. 2017; 6. Ambrose et al. 2015; 7. Zweifel et al. 2001; 8. Slot et al. 2019; 9. Hernandez et al. 2020; 10. Urban et al. 2007; 11. Carter and Cavaleri 2018; 12. Martin et al. 1999; 13. Mau et al. 2018;  14. Kosugi et al. 2012; 15. Niinemets et al. 2015; 16. Bachofen et al. 2020; 17. Hamerlynck and Knapp 1994; 18. Coble et al. 2017; 19. Wyka et al. 2012; 20. Rijkerse et al. 2000; 21. Ishida et al. 1999; 22. Weerasinghe et al. 2014; 23. Scartazza et al. 2016; 24. Miller et al. 2021; 25. Harris and Medina 2013; 26. Legner et al. 2014; 27. Kitao et al. 2012; 28. Fauset et al. 2018; 29. Rey-Sanchez et al. 2016; 30. Muller et al. 2021; 31. Curtis et al. 2019; 32. Mier et al. 2001; 33. Turnbull et al. 2003; 34. Araki et al. 2017; 35. Bolstad et al. 1999; 36. Kenzo et al. 2015; 37. Harley et al. 1996; 38. Xu and Griffin 2006; 39. Atherton et al. 2017; 40. Carter et al. 2021; 41. Sack et al. 2003
 
 ** (**NIDHI, we previously had a footnote here. I believe it's the savanna site. I can't find that, though.**)
 ```{r eval=FALSE, echo=FALSE}
