modest edits to biophysical gradients section
@NidhiVinod , this was mostly word-smithing, but I also added sentences at the end of a few paragraphs that I think will be helpful to guide the reader.

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -151,33 +151,37 @@ Canopy foliage acts as the primary physical barrier between the atmosphere and t
 Leaf area density (LAD; *i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Fig. `r fig_NEON_vertical`a-b, Supporting Information Figure `r SIfig_NEON_all`). 
 Tropical and temperate forests with dense canopies dominated by broadleaf trees generally have highest LAD in the upper canopy layers, but understory LAD is often relatively high in the understory as well, sometimes with undulating patterns [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a, @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993] *[@parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a; @parkerCanopyLightTransmittance2002]*. 
 In forests with more open upper canopies, including many needle-leaf forests, LAD can be predominantly accumulated in the lower canopy or understory layers [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`a, @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. 
-Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @bonan_ecological_2016; @hanberryOpenForestEcosystems2020a]. 
+Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @hanberryOpenForestEcosystems2020a]. 
 In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting LAD patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019]. 
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
 
-**Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor, with the profile shape modified by LAD, canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`a-d, Supporting Information Figure `r SIfig_NEON_all`, @koike_leaf_2001].** 
-This gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @aussenacInteractionsForestStands2000a; @smithSeasonalDroughtrelatedChanges2019; @tymenQuantifyingMicroenvironmentalVariation2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
+Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from the canopy top to the forest floor, with the profile shape modified by LAD, canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`a-d, Supporting Information Figure `r SIfig_NEON_all`, @koike_leaf_2001].
+This gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @smithSeasonalDroughtrelatedChanges2019; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. 
+The implication of this light gradient is that upper canopy leaves have higher potential photosynthetic rate (see section "Leaf metabolism and thermal responses"), but also greater propensity towards elevated $T_{leaf}$ (see section "Leaf temperature").
 
-**Wind speeds are also higher at the top of the canopy, owing to the buffering effect of the canopy [@juckerCanopyStructureTopography2018].**
-Wind speeds increase with height across forest types [Fig. `r fig_NEON_vertical`e, Supporting Information Figure `r SIfig_NEON_all`; @barnardSeasonalVariationCanopy2016a; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020a; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVertical2020]. Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1 m s^-1^ at the top of the vertical profile, compared to  $\le$ 1.1 m s^-1^ at the bottom (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`).
+Wind speeds are also higher at the top of the canopy, owing to the buffering effect of the canopy [@juckerCanopyStructureTopography2018].
+This holds true across the range of forest types [Fig. `r fig_NEON_vertical`e, Supporting Information Figure `r SIfig_NEON_all`, @barnardSeasonalVariationCanopy2016a; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020a; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVertical2020]. 
+Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1 m s^-1^ at the top of the vertical profile, compared to  $\le$ 1.1 m s^-1^ at the bottom (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`).
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for both water and heat loss (see section "Leaf temperature").
 
-**Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.**
+Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.
 Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Elevated CO~2~ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
 
-Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, e.g., @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018].
+Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, e.g., @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020a]. 
 In combination with $T_{air}$, RH determines vapor pressure deficit (VPD) -- the driving force of water loss from leaves, which tends to be greater in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Especially when canopy height and LAI are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
+The implication is that canopy leaves face higher $g_b$ and associated potential for water and heat loss (see section "Leaf temperature").
 
-**Air temperature ($T_{air}$) often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`).**
+Air temperature ($T_{air}$) often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`).
 The $T_{air}$ gradient from the upper canopy to the understory varies with factors such as radiation fluxes, local topography, vertical air mixing, cloud cover and vegetation type [@defrenneForestMicroclimatesClimate2021]. 
 Typically, dense canopies buffer understories from high maximum $T_{air}$ more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than open canopy understories or nearby clearings [@missonPartitioningForestCarbon2007; @defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. 
-Notably, this pattern can be reversed in open forests, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and the thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers, analogous to a 'canopy greenhouse effect' [e.g., OSBS, Fig. `r fig_NEON_vertical`g, Supporting Information Figure `r SIfig_NEON_all`b, @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].    
+Notably, this pattern can be reversed in open forests, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and the thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers, analogous to a 'canopy greenhouse effect' [e.g., OSBS, Fig. `r fig_NEON_vertical`g, Supporting Information Figure `r SIfig_NEON_all`b, @hadleyInfluenceKrummholzMat1987; @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].
+These usually-modest gradients in $T_{air}$ combine with the above-described gradients in other biophysical conditions to shape $T_{leaf}$.
 
 ## Leaf temperature 
 
-Leaf temperature ($T_{leaf}$) is strongly tied to $T_{air}$, and is further influenced by other biophysical drivers (reviewed above) and by leaf traits and stomatal conductance (see following sections) with leaves adjusting to their environment to approach, when possible, an optimal $T_{leaf}$ for carbon assimilation and metabolic processes [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020; @drakeNoEvidenceHomeostatic2020]. 
+$T_{leaf}$ is strongly tied to $T_{air}$, and is further influenced by other biophysical drivers (reviewed above) and by leaf traits and stomatal conductance (see following sections) with leaves adjusting to their environment to approach, when possible, an optimal $T_{leaf}$ for carbon assimilation and metabolic processes [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020; @drakeNoEvidenceHomeostatic2020]. 
 Leaves are typically cooler than the air at night, and during the day especially under cloudy skies, at high windspeeds and high $T_{air}$. Leaves are typically warmer than air when under full sunlight, especially under slow windspeeds and low $T_{air}$ [@doughtyAreTropicalForests2008].
 While $T_{leaf}$ is rarely exactly equal to $T_{air}$, it is most commonly within a few degrees [@cavaleriColdbloodedForestsWarming2020]. 
 
