--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -189,9 +189,11 @@ While $T_{leaf}$ is rarely exactly equal to $T_{air}$, it is most commonly withi
 
 ### Biophysical drivers
 
-**Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on biophysical principles, where $T_{leaf}-T_{air}$ is a function of energy input from net radiation ($R_n$, including shortwave and longwave) minus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019].**
-High $R_n$ loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a). Sensible heat flux between leaf and air is regulated by leaf boundary layer conductance, which is greater in smaller leaves (Fig. `r fig_leaf_T`d) and higher wind speeds (Fig. `r fig_leaf_T`b). Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD; notably, $g_b$ is influenced by windspeed and $g_s$ respond due to stomatal closure under high VPD.
-Therefore, under full sunlight, $T_{leaf}-T_{air}$ decreases with $g_b$, which increases with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999a] and $g_s$ (Fig. `r fig_leaf_T`e); increases with leaf size (Fig. `r fig_leaf_T`d); and increases with RH (Fig. `r fig_leaf_T`c).
+Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on biophysical principles, where $T_{leaf}-T_{air}$ is a function of energy input from net radiation ($R_n$, including shortwave and longwave) minus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019].
+High $R_n$ loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a). 
+Sensible heat flux between leaf and air is regulated by leaf boundary layer conductance, which is greater in smaller leaves (Fig. `r fig_leaf_T`d) and higher wind speeds (Fig. `r fig_leaf_T`b). 
+Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD, where $g_b$ increases with wind speed and $g_s$ can decline at high VPD due to stomatal closure.
+Therefore, $T_{leaf}-T_{air}$ decreases with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999a], increases with RH (Fig. `r fig_leaf_T`c), increases with leaf size (Fig. `r fig_leaf_T`d), and decreases with $g_s$ (Fig. `r fig_leaf_T`e).
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in $T_{leaf}-T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`.](leaf_energy_balance/fig3_leafenergy.png)
 
