--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -314,7 +314,7 @@ Table `r table_leaf_metabolism`, cont.
 
 *1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et al. 1990; 4. Dang et al. 1997; 5. Marenco et al. 2017; 6. Ambrose et al. 2015; 7. Zweifel et al. 2001; 8. Slot et al. 2019; 9. Hernandez et al. 2020; 10. Urban et al. 2007; 11. Carter and Cavaleri 2018; 12. Martin et al. 1999; 13. Mau et al. 2018;  14. Kosugi et al. 2012; 15. Niinemets et al. 2015; 16. Bachofen et al. 2020; 17. Hamerlynck and Knapp 1994; 18. Coble et al. 2017; 19. Wyka et al. 2012; 20. Rijkerse et al. 2000; 21. Ishida et al. 1999; 22. Weerasinghe et al. 2014; 23. Scartazza et al. 2016; 24. Miller et al. 2021; 25. Harris and Medina 2013; 26. Legner et al. 2014; 27. Kitao et al. 2012; 28. Fauset et al. 2018; 29. Rey-Sanchez et al. 2016; 30. Muller et al. 2021; 31. Curtis et al. 2019; 32. Mier et al. 2001; 33. Turnbull et al. 2003; 34. Araki et al. 2017; 35. Bolstad et al. 1999; 36. Kenzo et al. 2015; 37. Harley et al. 1996; 38. Xu and Griffin 2006; 39. Atherton et al. 2017; 40. Carter et al. 2021; 41. Sack et al. 2003; 42. Taylor et al. 2021; 43. Harley et al. 1997; 44. Niinemets and Sun, 2014; 45. Sharkey and Monson, 2014; 46. Saimpraga et al. 2013
 
-** (**NIDHI, we previously had a footnote here. I believe it's the savanna site. I can't find that, though.**)
+** composite climatic stress variable from canopy temperature, vapour pressure deficit, and relative humidity is higher in lower canopy
 ```{r eval=FALSE, echo=FALSE}
 # refs in this table currently in the nocite field at top of document 
 ```
