--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -82,12 +82,9 @@ Energy balance for a typical overstory sun leaf and understory shade leaf were m
 
 *Describe where you came up with all the parameters:*
 
-- micromet from NEON (explain exactly what you used)
-- leaf characteristic dimension, was measured on *Quercus rubra* sun and shade leaf, 
-- stomatal conductance measurements were referred from Tleaves typical sun and shade measurements [@muir_tealeaves_2019] 
-- @cavender-baresChangesDroughtResponse2000. 
+For normal scenario, micrometeorological data from Harvard NEON was used to parameterize biophysical constants, ie. the maximum mean of PAR, wind speed, RH and $T_{air}$ (Fig.3) for growing season months at vertical positions 60m (overstory) and 10m (understory). Leaf size parameters were selected for *Quercus rubra* sun and shade leaf based on personal observations (by Vinod) and verified as reasonable by @zwienieckiHydraulicLimitationsImposed2004. Stomatal conductance measurements were referred from *Tleaves* typical sun and shade measurements [@muir_tealeaves_2019] and @cavender-baresChangesDroughtResponse2000. 
 
-For drought scenario, biophysical variables were parameterized similar to normal scenario using Harvard NEON data. Overstory drought PAR values reflect maximum observed Harvard NEON PAR and understory drought reflect 50% increased PAR of understory normal value. Leaf trait measurements for leaf width is the same as normal scenario, stomatal conductance is kept constant at a minimum value of 0.01 umol/m^2/s/Pa for both positions. In each visual, all variables are constant (Biophysical Constants table) except for the independent variable that represents minimum - maximum range.
+For the drought scenario, biophysical constants were used from Harvard NEON data as well. For overstory drought PAR values, we used maximum Harvard NEON PAR value at 60m, and for understory drought PAR we used 50% increased PAR of understory normal value. Leaf trait measurements for leaf width is the same as normal scenario, stomatal conductance is kept constant at a minimum value of 0.01 $\mu mol/m^2/s/Pa$ for both overstory and understory. In each visual, all biophysical variables are constant except for the independent variable that represents a minimum - maximum range. 
 
 \newpage
 # `r appendix_lit_review_methods_title`
@@ -96,17 +93,19 @@ For drought scenario, biophysical variables were parameterized similar to normal
 
 Relevant studies were searched in the databases: ISI Web of Science, Smithsonian online library and Google Scholar, using the following key terms: (leaf traits OR foliar traits) AND (inter-canopy OR intra-canopy OR canopy height) AND (e.g. chlorophyll OR e.g. LMA OR stomatal conductance); (leaf temperature and metabolism OR leaf thermal sensitivity  OR leaf thermal tolerance OR leaf traits OR foliar traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy height OR canopy gradient OR canopy profile OR canopy position) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical); (leaf* temperature* and metabolism OR leaf thermal* sensitivity  OR leaf thermal tolerance OR leaf* traits OR foliar* traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy* height OR canopy gradient OR canopy profile) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical).
 
-in Google Scholar, 600 articles were screened, using the key terms—(leaf temperature and metabolism OR leaf thermal sensitivity  OR leaf thermal tolerance OR leaf traits OR foliar traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy height OR canopy gradient OR canopy profile OR canopy position) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical). After screening the title and reading the abstract, 185 articles were most relevant. Herbaceous plant studies and seedling studies were excluded. These articles were added into Zotero folders: Leaf traits;  Leaf Metabolism and Processes, accordingly, for further careful reading.
+in Google Scholar, 600 articles were screened, using the key terms (leaf temperature and metabolism OR leaf thermal sensitivity  OR leaf thermal tolerance OR leaf traits OR foliar traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy height OR canopy gradient OR canopy profile OR canopy position) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical). After screening the title and reading the abstract, 185 articles were most relevant. Herbaceous plant studies and seedling studies were excluded. These articles were added into Zotero folders: Leaf traits;  Leaf Metabolism and Processes, accordingly, for further careful reading.
 
-Similar search was conducted with the Smithsonian online library with the key terms— (leaf traits OR foliar traits) AND (inter-canopy OR intra-canopy OR canopy height) AND (e.g. chlorophyll OR e.g. LMA OR stomatal conductance)— provided most relevant results among the set of keywords mentioned above, with the field refine function that included botany, ecology, biology, environmental sciences, and forestry. Out of 150 relevant articles screened, 26 were most relevant after screening the title and reading the abstract, out of which 22 were already acquired through Google scholar search, 4 new articles were added to the folder. 
+Similar search was conducted with the Smithsonian online library with the key terms (leaf traits OR foliar traits) AND (inter-canopy OR intra-canopy OR canopy height) AND (e.g. chlorophyll OR e.g. LMA OR stomatal conductance) provided most relevant results among the set of keywords mentioned above, with the field refine function that included botany, ecology, biology, environmental sciences, and forestry. Out of 150 relevant articles screened, 26 were most relevant after screening the title and reading the abstract, out of which 22 were already acquired through Google scholar search, 4 new articles were added to the folder. 
 
-For ISI Web of Science, search the key terms—(leaf* temperature* and metabolism OR leaf thermal* sensitivity  OR leaf thermal tolerance OR leaf* traits OR foliar* traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy* height OR canopy gradient OR canopy profile) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical)— yielded 410 relevant results, 37 were most relevant after screening the title and reading the abstract, out of which 24 were already acquired through the above process, 13 new articles were added to Zotero folders.
+For ISI Web of Science, search the key terms (leaf* temperature* and metabolism OR leaf thermal* sensitivity  OR leaf thermal tolerance OR leaf* traits OR foliar* traits) AND (within-canopy OR intra-canopy OR sun shade OR canopy* height OR canopy gradient OR canopy profile) AND (temperate forests OR boreal forest OR conifer OR savanna OR tropical) yielded 410 relevant results, 37 were most relevant after screening the title and reading the abstract, out of which 24 were already acquired through the above process, 13 new articles were added to Zotero folders.
 
-Through the above process, 202 articles were acquired into Zotero folders. The articles were tagged after careful reading of each as ‘added to the table’, ‘irrelevant to the table, but relevant to the review’ (with a note on the reason), ‘irrelevant to the table and the review’ (with a note on the reason for exclusion). Articles that were not yet carefully read were tagged ‘yet to read’, which will be tagged as one of the above after reading. Articles shared by co-authors and references mentioned in other studies collectively were ~>32 studies. So far 40 relevant articles are added into the tables
+Through the above process, 202 articles were acquired into Zotero folders. The articles were tagged after careful reading of each as added to the table, irrelevant to the table, but relevant to the reviewed (with a note on the reason), irrelevant to the table and the review (with a note on the reason for exclusion). Articles that were not yet carefully read were tagged yet to read, which will be tagged as one of the above after reading. Articles shared by co-authors and references mentioned in other studies collectively were ~>32 studies. So far 70 relevant articles are added into the tables
 
 ## Criteria for inclusion 
 
 **this is outlined [here](https://github.com/EcoClimLab/vertical-thermal-review/blob/master/Lit_Review/Methods%20for%20Systematic%20review%20for%20the%20tables.docx). Section needs to be written.**
+
+The studies included in the review were based on a global geographic scope. Ecosystem types included any studies with trees for mostly forests, but savannas were also considered. Information for leaf traits and metabolism included studies with independent variables: sun/shade vs height (where height is generally also sun/shade), and dependent variables of interest were based on variables known to influence leaf temperature ie. anatomical, biochemical, structural foliar traits, including gas exchange, metabolism and thermal sensitivity variables. 
 
 \newpage
  # `r NEON_sites_legend`
